<resources>
    <string name="app_name">COVID Stats</string>
    <string name="app_title">Stay Home Stay Safe</string>
    <string name="menu_dashboard">Stats</string>
    <string name="menu_info">Info</string>
    <string name="menu_world">Countries</string>
    <string name="menu_settings">Settings</string>
    <string name="cases_confirmed">Total\nConfirmed Cases</string>
    <string name="confirmed">Total Confirmed</string>
    <string name="deaths_total">Total Deaths</string>
    <string name="recoverd_total">Total Recovered</string>
    <string name="new_confirmed">New\nConfirmed Cases</string>
    <string name="new_country_confirmed">New Confirmed</string>
    <string name="deaths_new">New Deaths</string>
    <string name="recoverd_new">New Recovered</string>
    <string name="na">N/A</string>
    <string name="sort_AZ">Sort by Country A-Z</string>
    <string name="sort_ZA">Sort by Country Z-A</string>
    <string name="sort_cases">Sort by Total Cases</string>
    <string name="hint">Search</string>
    <string name="theme_settings">Theme</string>
    <string name="choose_theme_title">Choose Theme</string>
</resources>