<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.omer.covidstats.view.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/worldFragment"
        android:name="com.omer.covidstats.view.dashboard.WorldFragment"
        android:label="@string/menu_world"
        tools:layout="@layout/fragment_world" />
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.omer.covidstats.view.dashboard.AboutFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.omer.covidstats.view.dashboard.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>