<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dash_frag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.dashboard.DashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/menu_dashboard"
        app:titleTextColor="@android:color/white" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/seperatorView" />

    <TextView
        android:id="@+id/lastSync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:padding="2dp"
        android:textColor="@color/defaultText"
        android:textSize="20sp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="66dp"
                        android:fontFamily="@font/clanpro_book"
                        android:gravity="center"
                        android:text="@string/cases_confirmed"
                        android:textColor="@color/defaultText"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/casesTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/clanpro_medium"
                        android:text="@string/na"
                        android:textColor="@android:color/holo_green_light"
                        android:textSize="22sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_book"
                            android:gravity="center"
                            android:text="@string/recoverd_total"
                            android:textColor="@color/defaultText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/totalRecovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_medium"
                            android:text="@string/na"
                            android:textColor="@color/colorLogoLight"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_book"
                            android:gravity="center"
                            android:text="@string/deaths_total"
                            android:textColor="@color/defaultText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/totalDeaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_medium"
                            android:text="@string/na"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="20sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/clanpro_book"
                        android:gravity="center"
                        android:text="@string/new_confirmed"
                        android:textColor="@color/defaultText"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/newCases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/clanpro_medium"
                        android:text="@string/na"
                        android:textColor="@android:color/holo_green_light"
                        android:textSize="22sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_book"
                            android:gravity="center"
                            android:text="@string/recoverd_new"
                            android:textColor="@color/defaultText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/newRecovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_medium"
                            android:text="@string/na"
                            android:textColor="@color/colorLogoLight"
                            android:textSize="22sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_book"
                            android:gravity="center"
                            android:text="@string/deaths_new"
                            android:textColor="@color/defaultText"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/newDeaths"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/clanpro_medium"
                            android:text="@string/na"
                            android:textColor="@android:color/holo_red_light"
                            android:textSize="22sp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>