<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/countryName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/clanpro_book"
                    android:textColor="@color/defaultText"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/countryTC"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/clanpro_medium"
                    android:gravity="end"
                    android:text="@string/na"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="22sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sub_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="8dp">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:background="@color/listBG"
                    tools:background="@color/seperatorView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_book"
                        android:text="@string/confirmed"
                        android:textColor="@color/defaultText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/countryConfirmed"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_medium"
                        android:gravity="end"
                        android:text="@string/na"
                        android:textColor="@android:color/holo_green_light"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/listBG"
                    tools:background="@color/seperatorView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_book"
                        android:text="@string/deaths_total"
                        android:textColor="@color/defaultText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/countryDeaths"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_medium"
                        android:gravity="end"
                        android:text="@string/na"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/listBG"
                    tools:background="@color/seperatorView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_book"
                        android:text="@string/recoverd_total"
                        android:textColor="@color/defaultText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/countryRecovered"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_medium"
                        android:gravity="end"
                        android:text="@string/na"
                        android:textColor="@color/colorLogoLight"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/listBG"
                    tools:background="@color/seperatorView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_book"
                        android:text="@string/new_country_confirmed"
                        android:textColor="@color/defaultText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/confirmedNew"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_medium"
                        android:gravity="end"
                        android:text="@string/na"
                        android:textColor="@android:color/holo_green_light"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view5"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/listBG"
                    tools:background="@color/seperatorView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_book"
                        android:text="@string/deaths_total"
                        android:textColor="@color/defaultText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/deathsNew"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_medium"
                        android:gravity="end"
                        android:text="@string/na"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:id="@+id/view6"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/listBG"
                    tools:background="@color/seperatorView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_book"
                        android:text="@string/recoverd_total"
                        android:textColor="@color/defaultText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/recoveredNew"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/clanpro_medium"
                        android:gravity="end"
                        android:text="@string/na"
                        android:textColor="@color/colorLogoLight"
                        android:textSize="16sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>